Closed Bug 1366930 Opened 7 years ago Closed 7 years ago

Correct error handling in mozilla::MediaShutdownManager::InitStatics

Categories

(Core :: Audio/Video: Playback, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

Attachments

(1 file)

Bug 1362927 is a failed attempt because resetting sInstance in MediaShutdownManager::InitStatics() will cause MediaShutdownManager::Instance().Register() to crash immediately without a chance to handle the error in Register().
Assignee: nobody → jwwang
Blocks: 1362927
Priority: -- → P1
Attachment #8870293 - Flags: review?(gsquelart)
Comment on attachment 8870293 [details]
Bug 1366930 - Correct error handling in mozilla::MediaShutdownManager::InitStatics.

https://reviewboard.mozilla.org/r/141762/#review146314

Sorry for the late review.
Attachment #8870293 - Flags: review?(gsquelart) → review+
Thanks!
Pushed by jwwang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e84f6d9930a2
Correct error handling in mozilla::MediaShutdownManager::InitStatics. r=gerald
https://hg.mozilla.org/mozilla-central/rev/e84f6d9930a2
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: