Bug 1366930 - Correct error handling in mozilla::MediaShutdownManager::InitStatics. r=gerald

Resetting sInstance in MediaShutdownManager::InitStatics() will cause
MediaShutdownManager::Instance().Register() to crash immediately without
a chance to handle the error in Register().

Instead, we keep an error code to know whether to bail out in Register().

MozReview-Commit-ID: EGqL1407Gh